--- a/source/templates/includes/header.ejs
+++ b/source/templates/includes/header.ejs
@@ -20,10 +20,15 @@
     <label for="bmenub" class="burger pseudo button">&#9776;</label>
     <div class="menu">
         <% if(req.user){ %>
+
+            <form action="/mostactive" method="get" class="horizontal">
+                <input type="submit" class="warning" value="Найболее активные">
+            </form>
             <a href="/add/" class="button">Добавить дело</a>
             <form action="/logout" method="post" class="horizontal">
                 <input type="submit" class="warning" value="Выйти">
             </form>
+
         <% }else { %>
             <a href="/register/" class="button">Зарегистрироваться</a>
             <a href="/login/" class="button success">Войти</a>
